--- a/src/Jahller/Bundle/ArtlasBundle/Resources/views/Default/index.html.twig
+++ b/src/Jahller/Bundle/ArtlasBundle/Resources/views/Default/index.html.twig
@@ -12,12 +12,12 @@
 {% block body %}
     <div id="content">
         <div id="navigation">
-            <button id="createPiece" type="button" class="btn btn-warning">
-                <i class="fa fa-lg fa-paint-brush"></i> Create Piece
+            <button id="createPiece" type="button" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Add Piece">
+                <i class="fa fa-lg fa-paint-brush"></i>
             </button>
-            <button type="button" class="btn btn-warning">
+            <a href="https://github.com/jahller/streetartlas" target="_blank" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Show on GitHub">
                 <i class="fa fa-lg fa-github-alt"></i>
-            </button>
+            </a>
         </div>
 
         <div id="map"></div>
