--- a/src/Jahller/Bundle/ArtlasBundle/Resources/public/css/03.streetartlas.css
+++ b/src/Jahller/Bundle/ArtlasBundle/Resources/public/css/03.streetartlas.css
@@ -3,6 +3,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
+label.required:before {
+  content: "* ";
+}
 #content {
   width: 100%;
   height: 100%;
@@ -14,7 +17,7 @@ html, body {
 #content #navigation {
   position: absolute;
   z-index: 100;
-  width: 100%;
+  width: 115px;
   text-align: left;
   padding: 10px;
 }
@@ -30,5 +33,8 @@ html, body {
 #globalMessages .alert {
   padding: 10px;
   margin-bottom: 10px;
+  text-align: center;
+}
+#showPieceModal .modal-body {
   text-align: center;
 }
