Created backend with admin functionality

--- a/src/Jahller/Bundle/ArtlasBundle/Resources/views/Piece/show.html.twig
+++ b/src/Jahller/Bundle/ArtlasBundle/Resources/views/Piece/show.html.twig
@@ -1,6 +1,6 @@
 {% block modal_content %}
     <div>
-        <img src="{{ asset(path('jahller_artlas_piece_image_preview', {'id': piece.id, 'size': 'lightbox'})) }}" height="400" alt="Example" />
+        <img src="{{ asset(path('jahller_artlas_piece_image_preview', {'id': piece.id, 'size': 'lightbox'})) }}" alt="Example" />
         <div>
             {% for tag in piece.tags %}
                 <span class="badge">{{ tag.title }}</span>
