--- a/src/Jahller/Bundle/ArtlasBundle/Resources/public/css/03.streetartlas.css
+++ b/src/Jahller/Bundle/ArtlasBundle/Resources/public/css/03.streetartlas.css
@@ -10,6 +10,21 @@ label.required:before {
   width: 100%;
   height: 100%;
 }
+#content.frontend {
+  padding: 20px;
+  padding-left: 90px;
+  background: url('/bundles/jahllerartlas/images/bg1.png') repeat-x bottom left;
+}
+#content.frontend .btn-default {
+  color: #f388ae;
+  background-color: #fee3e9;
+  background-image: none;
+  border-color: transparent;
+  text-shadow: 0 0 0 transparent;
+}
+#content.frontend .btn-default:hover {
+  background-color: #f8ced9;
+}
 #content #map {
   height: 100%;
   width: 100%;
@@ -19,7 +34,15 @@ label.required:before {
   z-index: 100;
   width: 115px;
   text-align: left;
-  padding: 10px;
+}
+#content.frontend #navigation {
+  width: auto;
+  left: 20px;
+  top: 20px;
+}
+#content #navigation .element {
+  margin-bottom: 10px;
+  width: 24px;
 }
 #globalMessages {
   position: absolute;
@@ -35,6 +58,46 @@ label.required:before {
   margin-bottom: 10px;
   text-align: center;
 }
-#showPieceModal .modal-body {
+.modal-dialog {
+  width: 700px;
+}
+.modal-body {
   text-align: center;
 }
+button,
+.badge {
+  transition: background-color 200ms linear;
+}
+.badge-danger {
+  background-color: #c12e2a;
+}
+.badge .fa {
+  cursor: pointer;
+}
+.tag-list {
+  padding: 10px 0;
+}
+.tag-list ul {
+  padding: 0;
+  margin: 0;
+}
+.tag-list ul li {
+  margin-right: 7px;
+}
+#pieces {
+  display: none;
+}
+#pieces .piece {
+  width: 230px;
+  height: 215px;
+  float: left;
+  margin-right: 15px;
+}
+#pieces .piece .image {
+  width: 165px;
+  height: 165px;
+}
+#pieces .piece span.badge {
+  margin-right: 5px;
+}
+
