--- a/src/Jahller/Bundle/ArtlasBundle/Resources/views/Default/index.html.twig
+++ b/src/Jahller/Bundle/ArtlasBundle/Resources/views/Default/index.html.twig
@@ -10,48 +10,43 @@
 {% endblock %}
 
 {% block body %}
-    <div id="content">
+    <div id="content" class="frontend" ng-app="frontend" ng-cloak  ng-controller="FrontendController">
         <div id="navigation">
-            <button id="createPiece" type="button" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Add Piece">
-                <i class="fa fa-lg fa-paint-brush"></i>
-            </button>
-            <a href="https://github.com/jahller/streetartlas" target="_blank" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Show on GitHub">
-                <i class="fa fa-lg fa-github-alt"></i>
-            </a>
+            <div class="element">
+                <button id="createPiece" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Add Piece">
+                    <i class="fa fa-lg fa-fw fa-paint-brush"></i>
+                </button>
+            </div>
+            <div class="element">
+                <a href="{{ path('jahller_artlas_map') }}" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Switch to map view">
+                    <i class="fa fa-lg fa-fw fa-map"></i>
+                </a>
+            </div>
+            <div class="element">
+                <a href="https://github.com/jahller/streetartlas" target="_blank" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Show on GitHub">
+                    <i class="fa fa-lg fa-fw fa-github-alt"></i>
+                </a>
+            </div>
         </div>
 
-        <div id="map"></div>
+        <div id="pieces">
+            <div class="piece" ng-repeat="(key, piece) in pieceManager.pieces | orderBy:orderAttribute:orderDirection">
+                <div class="image" data-id="{[ piece.id ]}">
+                    {% image '@JahllerArtlasBundle/Resources/public/images/ghostery.png' %}
+                        <img src="{{ asset_url }}" alt="Loading" />
+                    {% endimage %}
+                </div>
+                <div class="tag-list">
+                    <span ng-repeat="(tagKey, tag) in piece.tags" class="badge">
+                        {[ tag.title ]}
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
 
     {{ include('JahllerArtlasBundle:Piece:new.html.twig', { 'form': form }) }}
     {{ include('JahllerArtlasBundle:Piece:show_modal.html.twig') }}
-{% endblock %}
-
-{% block dynamic_javascripts %}
-    <script type="text/javascript">
-        {% if pieceFormHasErrors %}
-            $('#createPieceModal').modal('show');
-        {% endif %}
-
-        function addMarker() {
-            {% for piece in pieces %}
-                {% if piece.image.exifData is defined %}
-                    var marker{{ loop.index }} = new google.maps.Marker({
-                        position: {lat: {{ piece.image.exifData.latitude }}, lng: {{ piece.image.exifData.longitude }}},
-                        map: map,
-                        title: 'Piece {{ loop.index }}',
-                        {% image '@JahllerArtlasBundle/Resources/public/images/marker_red.png' %}
-                            icon: '{{ asset_url }}'
-                        {% endimage %}
-                    });
-
-                    marker{{ loop.index }}.addListener('click', function() {
-                        openPieceDialog('{{ piece.id }}');
-                    });
-                {% endif %}
-            {% endfor %}
-        }
-    </script>
 {% endblock %}
 
 {% block javascripts %}
@@ -59,7 +54,14 @@
     {% javascripts '@JahllerArtlasBundle/Resources/public/js/*' %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTy4gSGEtYMLZiUQ0M04-oWTm5746BFOI&callback=initMap" async defer></script>
     <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+
+    {% javascripts 'bundles/jahllerartlas/js/src/piece/piece-repository.js'
+                   'bundles/jahllerartlas/js/src/piece/piece-manager.js'
+                   'bundles/jahllerartlas/js/src/frontend/frontend-app.js'
+                   'bundles/jahllerartlas/js/src/frontend/controller/frontend-controller.js'
+    output='js/compiled/frontend.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
